# sigv4

./: .coverage  .gitignore  AGENTS.md  DESIGN.md  README.md  Taskfile.dist.yaml  pyproject.toml
.github/workflows/: ci.yaml
scripts/: check-no-credential-leaks.py  check-no-runtime-deps.sh  sync-aws-test-suite.sh
src/aws_sigv4/: __init__.py  _log.py  credentials.py  resolve.py
src/aws_sigv4/providers/: config_file.py  container.py  env.py  imds.py  web_identity.py
src/sigv4/: __init__.py  _log.py  credentials.py  resolve.py  signer.py  signing.py
src/sigv4/providers/: config_file.py  container.py  env.py  imds.py  web_identity.py
tests/: test_aws_test_suite.py  test_credentials.py  test_log.py  test_resolve.py  test_signer.py  test_signing.py
tests/data/: README.md
tests/data/aws4_testsuite/: .upstream-commit
tests/test_providers/: test_config_file.py  test_container.py  test_env.py  test_imds.py  test_web_identity.py
