[project]
name = "sigv4"
version = "0.1.0"
description = "Zero Python package dependencies. AWS Signature Version 4 request signing. Supports env vars, IRSA, ECS, EC2, and config file credentials. No boto3 required."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Doug Richardson", email = "git@rekt.email" }
]
requires-python = ">=3.14"
dependencies = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = ["aws", "sigv4", "signing", "irsa", "authentication"]

[project.urls]
Documentation = "https://github.com/drichardson/sigv4"
Issues = "https://github.com/drichardson/sigv4/issues"
Source = "https://github.com/drichardson/sigv4.git"

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.0.0",
    "ruff",
    "pytest-cov>=7.1.0",
    "pytest-httpserver>=1.1.5",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
ignore = ["G004"]

[tool.pytest.ini_options]
addopts = "--cov=sigv4 --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=100"

[tool.coverage.run]
source = ["sigv4"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
